--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "app.ts",
   "repository": "https://github.com/jeonsoeun/portal-back-end.git",
   "author": "Soeun Jun <jse525@naver.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "koa": "^2.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "prettier": "^1.19.1"
+  }
 }
