api 폴더 나눔, tslint 복사해옴.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   "license": "MIT",
   "scripts": {
     "build": "",
-    "start": "nodemon src/index.ts"
+    "dev": "nodemon src/app.ts"
   },
   "dependencies": {
-    "koa": "^2.11.0"
+    "config": "^3.2.5",
+    "koa": "^2.11.0",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.8.9"
   },
   "devDependencies": {
+    "@types/config": "^0.0.36",
+    "@types/koa": "^2.11.0",
+    "@types/koa-router": "^7.4.0",
+    "@types/koa__cors": "^3.0.0",
+    "@types/node": "^13.1.6",
     "eslint": "^6.6.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
