--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "config": "^3.2.5",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "mongoose": "^5.8.9"
   },
@@ -20,6 +21,8 @@
     "@types/koa": "^2.11.0",
     "@types/koa-router": "^7.4.0",
     "@types/koa__cors": "^3.0.0",
+    "@types/mongodb": "^3.3.15",
+    "@types/mongoose": "^5.5.43",
     "@types/node": "^13.1.6",
     "eslint": "^6.6.0",
     "nodemon": "^2.0.2",
